Prevent text wrapping artifact upon left bar collapse.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -7370,6 +7370,9 @@ body.with-listing-chooser {
         border-right: none;
         margin-bottom: 10px;
 
+        // set a static width so text doesn't wrap upon bar collapse
+        width: @lc-width;
+
         p {
             font-size: 1.15em;
             margin: 4px;
